--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "babylonjs": "^7.40.3",
     "typescript": "^5.7.2"
+  },
+  "peerDependencies": {
+    "babylonjs": "^7.40.3"
   }
 }
